Added slim framework to required and changed autoload from PSR-0 to files (just for now)

--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,10 @@
 	],
 	"require": {
 		"php": ">=5.3",
+		"slim/slim": "2.3.*",
 		"robodt/robodt": "0.1.*"
 	},
 	"autoload": {
-		"psr-0": { "": "src/" }
+		"files": ["src/Slim.php"]
 	}
 }
